Adding the execution flag for maven to the readme